fix:  missing overflow property

--- a/packages/fuselage/src/components/Bubble/Bubble.styles.scss
+++ b/packages/fuselage/src/components/Bubble/Bubble.styles.scss
@@ -8,6 +8,9 @@
 
 .rcx-bubble {
   display: flex;
+
+  overflow: hidden;
+
   align-items: center;
 
   &__button {
